feat(maven)!: make artifact path manifests scope-independent
Remove module and scope from Artifact Path JSON Schema v2. Bind module-local artifacts by canonical coordinates and manifest directory, and ignore scope-only dependency changes.

BREAKING CHANGE: Artifact Path JSON now requires Schema v2; Analyzer 1.0.0 requires Artifact Path Plugin 2.0.0.