@@ -1,9 +1,12 @@
 package io.github.dependencyanalysis.dependency;
 
+import java.io.IOException;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 
 /** Dependency trees plus canonical physical artifact bindings. */
@@ -12,23 +15,41 @@ public final class DependencyAnalysisResult {
     /** Parsed dependency trees. */
     private final List<ModuleDependencyTree> trees;
 
-    /** Resolved physical artifacts. */
+    /** Flattened resolved physical artifacts. */
     private final List<ResolvedArtifact> artifacts;
+
+    /** Resolved artifacts indexed by contextual manifest directory. */
+    private final Map<Path, List<ResolvedArtifact>> artifactsByDirectory;
 
     /**
      * Creates a dependency analysis result.
      *
      * @param moduleTrees parsed module trees
-     * @param resolvedArtifacts resolved artifacts
+     * @param resolvedArtifacts resolved artifacts by manifest directory
      */
     public DependencyAnalysisResult(
             final List<ModuleDependencyTree> moduleTrees,
-            final List<ResolvedArtifact> resolvedArtifacts) {
+            final Map<Path, List<ResolvedArtifact>> resolvedArtifacts) {
         trees = Collections.unmodifiableList(new ArrayList<>(
                 Objects.requireNonNull(moduleTrees, "moduleTrees")));
-        artifacts = Collections.unmodifiableList(new ArrayList<>(
-                Objects.requireNonNull(resolvedArtifacts,
-                        "resolvedArtifacts")));
+        Objects.requireNonNull(resolvedArtifacts, "resolvedArtifacts");
+        final Map<Path, List<ResolvedArtifact>> indexed =
+                new LinkedHashMap<>();
+        final List<ResolvedArtifact> flattened = new ArrayList<>();
+        resolvedArtifacts.forEach((directory, values) -> {
+            final Path normalized = canonicalDirectory(
+                    Objects.requireNonNull(
+                            directory, "artifactDirectory"));
+            final List<ResolvedArtifact> copy = List.copyOf(
+                    Objects.requireNonNull(values, "artifactValues"));
+            if (indexed.put(normalized, copy) != null) {
+                throw new IllegalArgumentException(
+                        "Duplicate artifact directory: " + normalized);
+            }
+            flattened.addAll(copy);
+        });
+        artifactsByDirectory = Collections.unmodifiableMap(indexed);
+        artifacts = Collections.unmodifiableList(flattened);
     }
 
     /** @return parsed module trees */
@@ -48,9 +69,15 @@ public final class DependencyAnalysisResult {
      * @return deterministic binding list
      */
     public List<ResolvedArtifact> artifactsFor(final Path modulePath) {
-        final Path normalized = modulePath.toAbsolutePath().normalize();
-        return artifacts.stream()
-                .filter(item -> item.getModulePath().equals(normalized))
-                .toList();
+        final Path directory = canonicalDirectory(modulePath);
+        return artifactsByDirectory.getOrDefault(directory, List.of());
+    }
+
+    private static Path canonicalDirectory(final Path directory) {
+        try {
+            return directory.toRealPath();
+        } catch (IOException exception) {
+            return directory.toAbsolutePath().normalize();
+        }
     }
 }
